Fixed display not appearing correctly on smaller screens

--- a/ui/snapclient/src/app/mapping/mapping-view/mapping-view.component.css
+++ b/ui/snapclient/src/app/mapping/mapping-view/mapping-view.component.css
@@ -228,6 +228,7 @@ td.mat-cell {
 
 .mapping-details {
   flex: 1;
+  max-width: 50%;
 }
 
 .actions-card {
